2008-06-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* sys/dvb/gstdvbsrc.c:
	Fix out of date docs.

2008-06-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	Patch from: Vincent Genieux

	* gst/mpegtsparse/mpegtsparse.c:
	Fix refcount issues, fixes #538560.

2008-06-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegtsparse/gstmpegdesc.h:
	* gst/mpegtsparse/mpegtspacketizer.c:
	Parse the extended event descriptor.

2008-06-16  Stefan Kost  <ensonic@users.sf.net>

	* gst/rtpmanager/gstrtpjitterbuffer.c:
	* gst/speed/gstspeed.c:
	* gst/speexresample/gstspeexresample.c:
	* gst/videosignal/gstvideoanalyse.c:
	* gst/videosignal/gstvideodetect.c:
	* gst/videosignal/gstvideomark.c:
	* sys/dvb/gstdvbsrc.c:
	* sys/oss4/oss4-mixer.c:
	* sys/oss4/oss4-sink.c:
	* sys/oss4/oss4-source.c:
	* sys/wininet/gstwininetsrc.c:
	  Final round of doc updates.

2008-06-16  Stefan Kost  <ensonic@users.sf.net>

	* gst/deinterlace/gstdeinterlace.c:
	* gst/rtpmanager/gstrtpbin.c:
	* gst/rtpmanager/gstrtpclient.c:
	* gst/rtpmanager/gstrtpjitterbuffer.c:
	* gst/rtpmanager/gstrtpptdemux.c:
	* gst/rtpmanager/gstrtpsession.c:
	* gst/rtpmanager/gstrtpssrcdemux.c:
	* gst/sdp/gstsdpdemux.c:
	  More doc updates. More xrefs.

2008-06-14  Julien Moutte  <julien@fluendo.com>

	* gst/flv/gstflvdemux.c: (gst_flv_demux_cleanup),
	(gst_flv_demux_dispose):
	* gst/flv/gstflvdemux.h:
	* gst/flv/gstflvparse.c: (gst_flv_parse_audio_negotiate),
	(gst_flv_parse_tag_audio), (gst_flv_parse_video_negotiate),
	(gst_flv_parse_tag_video): Introduce demuxing support for AAC and
	H.264/AVC inside FLV.
	* sys/dshowdecwrapper/gstdshowaudiodec.c: (gst_dshowaudiodec_init),
	(gst_dshowaudiodec_chain), (gst_dshowaudiodec_push_buffer),
	(gst_dshowaudiodec_sink_event), (gst_dshowaudiodec_setup_graph):
	* sys/dshowdecwrapper/gstdshowaudiodec.h:
	* sys/dshowdecwrapper/gstdshowvideodec.c: (gst_dshowvideodec_init),
	(gst_dshowvideodec_sink_event), (gst_dshowvideodec_chain),